fixed locations-overview to not squish images

--- a/public/stylesheets/admin/_locations-dashboard.scss
+++ b/public/stylesheets/admin/_locations-dashboard.scss
@@ -1,3 +1,15 @@
+.card-img-wrapper {
+    max-height: 400px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+
+    img {
+        width: 100%;
+        height: 100%;
+    }
+}
+
 
 /* Popup property */
 #popup{
